[gd_scene load_steps=10 format=2]

[ext_resource path="res://art/topdown-shooter/PNG/Woman Green/womanGreen_stand2.png" type="Texture" id=1]
[ext_resource path="res://art/topdown-shooter/PNG/Woman Green/womanGreen_rightArm.png" type="Texture" id=2]
[ext_resource path="res://characters/Character.gd" type="Script" id=5]
[ext_resource path="res://controllers/HumanController.tscn" type="PackedScene" id=6]
[ext_resource path="res://cameras/BasicCamera.tscn" type="PackedScene" id=7]
[ext_resource path="res://Backpack/Backpack.tscn" type="PackedScene" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "walk",
"speed": 1.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "run",
"speed": 1.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 87.946

[sub_resource type="CapsuleShape2D" id=3]
radius = 26.8092
height = 11.7169

[node name="Character" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 5 )
ControllerRef = ExtResource( 6 )
CameraRef = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "run"

[node name="InteractionArea" type="Area2D" parent="."]
visible = false
monitorable = false

[node name="InteractionCollisionShape" type="CollisionShape2D" parent="InteractionArea"]
visible = false
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="FieldOfView" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FieldOfView"]
visible = false
polygon = PoolVector2Array( 132, -150, 725, -331, 725, 331, 132, 150, -35, 24, -35, -24 )

[node name="Inventory" parent="." instance=ExtResource( 25 )]
Name = "Inventory"

[node name="Equipped" parent="." instance=ExtResource( 25 )]
Name = "equipped"
Width = 1
Height = 1

[connection signal="body_entered" from="FieldOfView" to="." method="_on_FieldOfView_body_entered"]
[connection signal="body_exited" from="FieldOfView" to="." method="_on_FieldOfView_body_exited"]
